--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-json-view": "^1.21.3",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@types/axios": "^0.9.36",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
